--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "mag.fyscu.com",
-    "version": "0.1.0",
+    "version": "1.0.0",
     "homepage": "/",
     "private": true,
     "dependencies": {
@@ -10,8 +10,10 @@
         "antd": "^5.21.4",
         "immer": "^10.1.1",
         "localforage": "^1.10.0",
+        "pdfjs-dist": "^4.8.69",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-pdf": "^9.2.1",
         "react-scripts": "5.0.1",
         "typescript": "^4.9.5"
     },
